--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,52 +5,47 @@ publish_mode: editorial_workflow
 media_folder: static/images
 public_folder: images
 collections:
-  - name: "authors"
-    label: "Authors"
-    folder: "content/authors"
+  - name: "arquitectos"
+    label: "Arquitectos"
+    folder: "content/arquitectos"
     create: true
     fields:
-      - {label: "Id", name: "id", widget: "hidden", default: "author_{{hour}}{{minute}}{{second}}"}
+      - {label: "Id", name: "id", widget: "hidden", default: "arquitecto_{{hour}}{{minute}}{{second}}"}
       - {label: "Name", name: "name", widget: "string"}
       - {label: "Nationality", name: "nationality", widget: "string"}
       - {label: "Birth_year", name: "birth_year", widget: "number"}
       - {label: "Fields", name: "fields", widget: "select", multiple: true,
-         options: ["Database Systems", "Operating Systems", " Distributed computing",
+         options: ["Arquitectura moderna", "Arquitectura contemporanea", "Arquitectura basica",
           "Compilers","Data Structures"]}
       - {label: "Image", name: "image", widget: "image",
-           media_folder: '/static/images/authors'}
+           media_folder: '/static/images/arquitectos'}
       - {label: "Body", name: "body", widget: "markdown"}
-  - name: "publishers"
-    label: "Publishers"
-    folder: "content/publishers"
+  - name: "ciudades"
+    label: "Ciudades"
+    folder: "content/ciudades"
     create: true
     fields:
-      - {label: "Id", name: "id", widget: "hidden", default: "publisher_{{hour}}{{minute}}{{second}}"}
+      - {label: "Id", name: "id", widget: "hidden", default: "ciudad_{{hour}}{{minute}}{{second}}"}
       - {label: "Name", name: "name", widget: "string"}
       - {label: "Country", name: "country", widget: "string"}
-      - {label: "Founded", name: "founded", widget: "number"}
-      - {label: "Genere", name: "genere", widget: "select", multiple: true,
-         options: ["Academic", "Education", " Computer Science"]}
       - {label: "Image", name: "image", widget: "image",
-           media_folder: '/static/images/publishers'}
+           media_folder: '/static/images/ciudades'}
       - {label: "Body", name: "body", widget: "markdown"}
-  - name: "books"
-    label: "Books"
-    folder: "content/books"
-    create: true
+  - name: "edificios"
+    label: "Edificios"
+    folder: "content/edificios"
+  create: true
     fields:
       - {label: "Id", name: "id", widget: "hidden", default: "book_{{hour}}{{minute}}{{second}}"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Edition", name: "edition", widget: "string"}
-      - {label: "Copyright", name: "copyright", widget: "number"}
-      - {label: "Language", name: "language", widget: "string"}
-      - {label: "Pages", name: "pages", widget: "number"}
-      - {label: "Author", name: "authorId", widget: "relation",
-          collection: "authors", search_fields: ["name"], value_field: "id",
+      - {label: "Founded", name: "founded", widget: "string"}
+      - {label: "High", name: "high", widget: "string"}
+      - {label: "Arquitecto", name: "arquitectoId", widget: "relation",
+          collection: "arquitectos", search_fields: ["name"], value_field: "id",
           display_fields: ["name"]}
-      - {label: "Publisher", name: "publisherId", widget: "relation",
-          collection: "publishers", search_fields: ["name"], value_field: "id",
+      - {label: "Publisher", name: "ciudadId", widget: "relation",
+          collection: "ciudades", search_fields: ["name"], value_field: "id",
           display_fields: ["name"]}
       - {label: "Image", name: "image", widget: "image",
-           media_folder: '/static/images/books'}
+           media_folder: '/static/images/edificios'}
       - {label: "Body", name: "body", widget: "markdown"}
