--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -28,6 +28,7 @@ collections:
       - {label: "Id", name: "id", widget: "hidden", default: "ciudad_{{hour}}{{minute}}{{second}}"}
       - {label: "Name", name: "name", widget: "string"}
       - {label: "Country", name: "country", widget: "string"}
+      - {label: "Founded", name: "founded", widget: "number"}
       - {label: "Image", name: "image", widget: "image",
            media_folder: '/static/images/ciudades'}
       - {label: "Body", name: "body", widget: "markdown"}
@@ -38,12 +39,12 @@ collections:
     fields:
       - {label: "Id", name: "id", widget: "hidden", default: "book_{{hour}}{{minute}}{{second}}"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Founded", name: "founded", widget: "string"}
+      - {label: "Founded", name: "founded", widget: "number"}
       - {label: "High", name: "high", widget: "string"}
       - {label: "Arquitecto", name: "arquitectoId", widget: "relation",
           collection: "arquitectos", search_fields: ["name"], value_field: "id",
           display_fields: ["name"]}
-      - {label: "Publisher", name: "ciudadId", widget: "relation",
+      - {label: "Ciudad", name: "ciudadId", widget: "relation",
           collection: "ciudades", search_fields: ["name"], value_field: "id",
           display_fields: ["name"]}
       - {label: "Image", name: "image", widget: "image",
